syntax = "proto3";
package fjwrap;

service KvService {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Set(SetRequest) returns (SetResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
    string partition = 1;
    bytes key = 2;
}

message GetResponse {
    optional bytes value = 1;
}

message SetRequest {
    string partition = 1;
    bytes key = 2;
    bytes value = 3;
}

message SetResponse {}

message DeleteRequest {
    string partition = 1;
    bytes key = 2;
}

message DeleteResponse {}

service RaftService {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
    rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}

message AppendEntriesRequest {}
message AppendEntriesResponse {}
message RequestVoteRequest {}
message RequestVoteResponse {}
message InstallSnapshotRequest {}
message InstallSnapshotResponse {}